Bug 210541 - Bookmarks service crashes if nsIProfile implementation is not present because of missing success check on getService() call. r=pch/sr=alecf